# genome_rspy

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: ci.yml
examples/: example.ipynb
genome_rspy/: __init__.py
packed_genome/src/: lib.rs  tests.rs
src/: lib.rs  python_module.rs  tests.rs
